Update content in outcome_no_visa_needed
Update content for people coming to the UK to study and don’t need a 
visa.

Test artefacts have updated as expected.

--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_no_visa_needed.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_no_visa_needed.govspeak.erb
@@ -9,7 +9,19 @@
 
   <% elsif calculator.study_visit? %>
 
-    However, you should bring documents with you to show at the border. See the relevant [student visa](/browse/visas-immigration/study-visas) guide to see what documents to bring.
+    However, you should bring documents with you to show at the border to show that you:
+
+      - have been accepted on a course by an [accredited institution](/eligibility) or by a UK Higher Education Institution, for example, a letter of acceptance from the institution
+      - are able to fund your stay in the UK and return journey
+      - intend to leave the UK at the end of your course
+
+    You’ll also need to show:
+
+      - details of where you intend to stay
+      - your [tuberculosis (TB) test results](/tb-test-visa) if you’re from a country where you have to take the test
+      - contact details for at least one parent or guardian in your home country (if you’re under 18 years old)
+
+    If you're under 18 and travelling without your parent or guardian, you'll need to provide [extra information to show they’ve given you permission](/study-visit-visa/documents-you-must-provide).
 
   <% elsif calculator.travelling_to_elsewhere? %>
     <% if calculator.passport_country_in_non_visa_national_list? ||
