--- a/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_uk.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_uk.govspeak.erb
@@ -56,12 +56,6 @@
     You should check with the local authorities in <%= calculator.country_name_lowercase_prefix %> to see if your CNI needs to be:
 
 
-  <% elsif calculator.ceremony_country == 'greece' %>
-    <%= render partial: 'legalisation_and_translation.govspeak.erb' %>
-    Your UK-issued CNI should be accepted by the town hall.
-
-    You should also check if it needs to be:
-
   <% else %>
     <%= render partial: 'legisation_and_translation_intro_uk.govspeak.erb',
                locals: { calculator: calculator } %>
@@ -75,8 +69,7 @@
   <% if calculator.partner_is_same_sex? ||
     (
       calculator.document_download_link_if_opposite_sex_resident_of_uk_countries? &&
-      (calculator.notary_public_ceremony_country? || %w(macedonia).include?(calculator.ceremony_country)) &&
-      %w(greece).exclude?(calculator.ceremony_country)
+      (calculator.notary_public_ceremony_country? || %w(macedonia).include?(calculator.ceremony_country))
     ) %>
     <%= render partial: 'download_and_fill_notice_and_affidavit_but_not_sign.govspeak.erb' %>
 
