Updated same sex outcome

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
@@ -1,44 +1,71 @@
-You may be able to get married at the British embassy or consulate in China.
+## Before you start
 
-Make an appointment at your nearest embassy or consulate.
+You can get married at the British Embassy in Beijing.
 
-[Make an appointment at the embassy in Beijing.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-beijing/notice-of-marriage-or-civil-partnership/slot_picker)
+## Prove you’re free to get married
 
-[Make an appointment at the consulate in Chongquing.](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-chongqing/notice-of-marriage-or-civil-partnership/slot_picker)
+You need to give notice of your marriage at an embassy or consulate. Your partner will also need to give notice if they’re British.
 
-[Make an appointment at the consulate in Guangzhou.](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-guangzhou/notice-of-marriage-or-civil-partnership/slot_picker)
+You need to have been in China for at least 7 full days before you can give notice. This means if you arrived on Monday, you can’t give notice until the following Tuesday.
 
-[Make an appointment at the consulate in Shanghai.](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-shanghai/notice-of-marriage-or-civil-partnership/slot_picker)
+You both need to sign a declaration that you’re free to marry.
 
-##What documents you’ll need
+### Give notice of your marriage
 
-You need to have been living in China for 21 days. You and your partner will need to sign a declaration and provide proof of residence for example, an employer’s letter or a bank statement.
+Make an appointment to give notice of your marriage at:
 
-You’ll both need your original passports. If either of you have been divorced, widowed or in a civil partnership before, you’ll also need either:
+- [the embassy in Beijing](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-beijing/notice-of-marriage-or-civil-partnership/slot_picker)
+- [the consulate in Chongquing](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-chongqing/notice-of-marriage-or-civil-partnership/slot_picker)
+- [the consulate in Guangzhou](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-guangzhou/notice-of-marriage-or-civil-partnership/slot_picker)
+- [the consulate in Shanghai](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-shanghai/notice-of-marriage-or-civil-partnership/slot_picker)
 
-- a [decree absolute or final order](/copy-decree-absolute-final-order)
-- the [death certificate](/order-copy-birth-death-marriage-certificate/)
+It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice. You can pay in the [local currency](/government/publications/china-consular-fees) with cash or credit card.
 
-##What you need to do
+You need to bring your and your partner’s passports.
 
-At your appointment the embassy or consulate will give you:
+If your partner isn’t British, you’ll need to bring their ‘single certificate’. They can get this from:
 
-- a notice of registration
-- a declaration that you and your partner will need to swear, stating that you’re legally entitled to marry
+- a local public notary where their Hukou is registered if they’re Chinese
+- their embassy or consulate if they’re a national of another country
 
-Once you’ve completed these and paid the registration fee, the embassy or consulate will display your notice publicly for 14 days.
+If you or your partner have been married or in a civil partnership before, you’ll also need:
 
-As long as nobody registers an objection you can get married up to 3 months after you gave notice.
+- your [original decree absolute or final order](/copy-decree-absolute-final-order) (this could be a printed PDF and covering email from the court) - if you’re divorced
+- your annulment certificate - if your marriage or civil partnership was annulled
+- your civil partnership dissolution - if your civil partnership was dissolved
+- your partner’s [death certificate](/order-copy-birth-death-marriage-certificate/) and marriage certificate - if you’ve been widowed
 
-You’ll need to bring two witnesses to your ceremony - they’ll need to show their photo ID (for example passport or driver’s licence).
+^If your divorce, civil partnership dissolution or annulment took place outside the UK, you’ll need evidence that you or your ex partner lived in or were a national of that country at the time.^
 
-You’ll need to pay a fee to register your marriage and a fee for your marriage certificate.
+The embassy or consulate will display your notice publicly for 14 days. If nobody registers an objection, you can get married up to 3 months after the end of your notice period.
 
-^All same-sex marriages must take place under English and Welsh or Scottish law even if you live in or are from Northern Ireland. Tell the embassy or consulate which law you want to get married under at your appointment.^
+Contact the [embassy in Beijing](/government/world/organisations/british-embassy-beijing#contact-us) to set a date for your wedding.
 
-##Naturalisation of your partner if they move to the UK
+### Sign a declaration
 
-Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+You and your partner need to sign a declaration to say that you’re legally allowed to get married. You’ll do this at the embassy in Beijing on your wedding day.
 
-<%= render partial: 'services_and_fees.govspeak.erb',
-             locals: { calculator: calculator } %>
+## Get married
+
+Your wedding ceremony will be at the embassy in Beijing on the date you agreed.
+
+You both need to bring your passports to show that you’ve been in mainland China for at least the last 21 full days.
+
+You’ll need to bring 2 witnesses to your ceremony. Your witnesses must:
+
+- bring photo ID
+- be 16 or over
+- know you or your partner
+- understand English well enough to follow the ceremony and read the marriage register
+
+You, your partner, your 2 witnesses and the consular officer will sign the marriage register.
+
+It costs <%= format_money calculator.consular_fee(:registering_marriage) %> to register your marriage. You can also pay <%= format_money calculator.consular_fee(:issuing_civil_partnership_or_marriage_certificate) %> for a marriage certificate if you want one.
+
+You’ll need to pay before your wedding in the [local currency](/government/publications/china-consular-fees) with cash or credit card.
+
+## After you get married
+
+You’ll be married under UK law, so your marriage will be recognised in the UK but not in China or other countries where same sex marriage isn’t legal.
+
+If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
