--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_joining_family_y.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_joining_family_y.govspeak.erb
@@ -9,6 +9,10 @@
 
   <%= render partial: 'stateless_or_refugee.govspeak.erb', locals: {calculator: calculator} %>
 
+  <% if calculator.passport_country_is_estonia? || calculator.passport_country_is_latvia? %>
+    ^ You must apply for your visa from the country you’re currently living in. ^
+  <% end %>
+
   ##They’re settled in the UK
 
   Apply for a [‘family of a settled person’ visa](/join-family-in-uk) if your family member or partner is either a British citizen or from outside the European Economic Area (EEA) and settled in the UK.
