Move common callout text to partial
The callout text for Estonia and Latvia appears in multiple templates.
To reduce the logic in the outcome templates, the text has been
refactored into a partial template.

No test artefacts were affected by this change.

--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_joining_family_y.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_joining_family_y.govspeak.erb
@@ -9,9 +9,7 @@
 
   <%= render partial: 'stateless_or_refugee.govspeak.erb', locals: {calculator: calculator} %>
 
-  <% if calculator.passport_country_is_estonia? || calculator.passport_country_is_latvia? %>
-    ^ You must apply for your visa from the country you’re currently living in. ^
-  <% end %>
+  <%= render partial: 'estonia_or_latvia.govspeak.erb', locals: {calculator: calculator} %>
 
   ##They’re settled in the UK
 
