Changed same sex heading
Removed civil partnership - not available in Turkey.

Test artefacts have updated as expected.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/turkey/_title.govspeak.erb
@@ -1,6 +1,6 @@
 <% content_for :title do %>
   <% if calculator.partner_is_same_sex? %>
-    Same-sex marriage and civil partnership in Turkey
+    Same-sex marriage in Turkey
   <% else %>
     Marriage in Turkey
   <% end %>
