--- a/lib/smart_answer_flows/landlord-immigration-check/questions/has_documents.govspeak.erb
+++ b/lib/smart_answer_flows/landlord-immigration-check/questions/has_documents.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Does the person have have a Home Office document marked ‘exempt from immigration control’, ‘no time limit’ or ‘right of abode’?
+  Does the person have a Home Office document marked ‘exempt from immigration control’, ‘no time limit’ or ‘right of abode’?
 <% end %>
 
 <% options(
@@ -11,7 +11,6 @@
   This can be any of the following:
 
   - a biometric ‘residence permit’ card
-  - a Permanent Residence Card, indefinite leave to remain, indefinite leave to enter or no time limit card issued by the Home Office
   - a ‘certificate of entitlement’ in their foreign passport
   - a ‘travel document' or ‘immigration status document’
   - an ‘exempt vignette’ (sticker in their foreign passport) - it could also be marked ‘official’ or ‘diplomatic’
