Remove unused USA code from marriage-abroad
The USA has it’s own outcomes, so logic specific to the USA can be
removed from other outcome templates and lists.

The unit tests have been updated because we are not using the
`country_name_lower_case_prefix` in the USA outcomes, so we do not need
to test for it.

No test artefacts were updated by this change.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_ceremonies_in_netherlands_or_marriage_via_local_authority_countries.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_ceremonies_in_netherlands_or_marriage_via_local_authority_countries.govspeak.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <% content_for :body do %>
-  <% if calculator.resident_outside_of_uk? || calculator.ceremony_country == 'usa' %>
+  <% if calculator.resident_outside_of_uk? %>
     <%= render partial: 'contact_local_authorities_in_country_marriage.govspeak.erb',
                locals: { calculator: calculator } %>
   <% else %>
