China - changed sentence
Syntax was odd

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
@@ -62,7 +62,7 @@ You, your partner, your 2 witnesses and the consular officer will sign the marri
 
 It costs <%= format_money calculator.consular_fee(:registering_marriage) %> to register your marriage. You can also pay <%= format_money calculator.consular_fee(:issuing_civil_partnership_or_marriage_certificate) %> for a marriage certificate if you want one.
 
-You’ll need to pay before your wedding in the [local currency](/government/publications/china-consular-fees) with cash or credit card.
+You’ll need to pay in the [local currency](/government/publications/china-consular-fees) with cash or credit card before your wedding.
 
 ## After you get married
 
