Changed arrived to arrive
Consistent with other outcomes

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
@@ -6,7 +6,7 @@ You can get married at the British Embassy in Beijing.
 
 You need to give notice of your marriage at an embassy or consulate. Your partner will also need to give notice if they’re British.
 
-You need to have been in China for at least 7 full days before you can give notice. This means if you arrived on Monday, you can’t give notice until the following Tuesday.
+You need to have been in China for at least 7 full days before you can give notice. This means if you arrive on Monday, you can’t give notice until the following Tuesday.
 
 You both need to sign a declaration that you’re free to marry.
 
