--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/_same_sex.govspeak.erb
@@ -1,9 +1,15 @@
-You can get a same-sex relationship legally recognised in the USA.
 
-##What you need to do
+You can get married in the USA.
 
-Contact the local authorities in the state you want to get married in the USA to find out about local laws, including what documents you’ll need.
+Contact the local authorities in the state you want to get married to find out about local laws. They’ll tell you what you need to do and what documents you need.
 
-^You should [get legal advice](/government/collections/list-of-lawyers) before making any plans.^
+## After you get married
 
-There aren’t any British consular facilities to register a same-sex relationship, or get legal documents to prove you’re eligible to enter into a same-sex relationship, in the USA.
+Your marriage will be recognised in the UK if:
+
+- you follow the correct process according to the law in the USA
+- it would be allowed under UK law
+
+You don’t need to register your marriage in the UK.
+
+If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
