USA changed same sex title

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/usa/_title.govspeak.erb
@@ -1,6 +1,6 @@
 <% content_for :title do %>
   <% if calculator.partner_is_same_sex? %>
-    Civil partnership in the USA
+    Same-sex marriage in the USA
   <% else %>
     Marriage in the USA
   <% end %>
