Changed bereavement payment to bereavement support
New benefit users will be eligible for from 6/4.

--- a/lib/smart_answer_flows/state-pension-through-partner/outcomes/married_woman_and_state_pension_outcome.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-through-partner/outcomes/married_woman_and_state_pension_outcome.govspeak.erb
@@ -77,7 +77,7 @@
 
   ###Other benefits you might get
 
-You might be eligible for a [Bereavement payment](/bereavement-payment), [Widowed Parent’s Allowance](/widowed-parents-allowance), or [Bereavement Allowance](/bereavement-allowance) if you haven’t yet reached State Pension age. You might be eligible for a bereavement payment if you’re over State Pension age but your late spouse or civil partner wasn’t getting any State Pension when they died.
+You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if you haven’t yet reached State Pension age. 
 
   ^You can contact the [Future Pension Centre](/future-pension-centre) for help and advice.^
 
