--- a/lib/smart_answer_flows/calculate-married-couples-allowance/questions/how_much_expected_contributions_before_tax.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-married-couples-allowance/questions/how_much_expected_contributions_before_tax.govspeak.erb
@@ -1,17 +1,9 @@
 <% content_for :title do %>
-  How much do you expect to pay into a pension where your contributions are made before tax is taken away?
+  How much do you expect to pay for the whole tax year into a retirement annuity contract (these payments are called ‘gross contributions’)?
 <% end %>
 
 <% content_for :hint do %>
   If none, please enter 0.
-<% end %>
-
-<% content_for :body do %>
-  Enter the total you expect to pay for the whole tax year into:
-
-  - pension schemes where your contributions are paid before your income is taxed (called ‘net pay arrangements’)
-  - retirement annuity contracts (called ‘gross contributions’)
-
 <% end %>
 
 <% content_for :error_message do %>
