--- a/lib/smart_answer_flows/state-pension-topup/state_pension_topup.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-topup/state_pension_topup.govspeak.erb
@@ -7,6 +7,8 @@
 <% end %>
 
 <% content_for :body do %>
+  ^ State Pension top up closes on 5 April. ^
+
   Until 5 April 2017 you’ll be able to apply to make a ‘Class 3A voluntary contribution’ to top up your State Pension by up to £25 per week.
 
   Calculate how much you’ll need to contribute. You must be [entitled to the State Pension](/state-pension/eligibility) and either:
