Correct acronym for Statutory Adoption Pay
Change acronym in heading for outcomes from:

“Statutory Adoption Pay (SPP)”

to

“Statutory Adoption Pay (SAP)”

--- a/lib/smart_answer_flows/maternity-paternity-calculator/outcomes/paternity_leave_and_pay.govspeak.erb
+++ b/lib/smart_answer_flows/maternity-paternity-calculator/outcomes/paternity_leave_and_pay.govspeak.erb
@@ -25,7 +25,7 @@
     <%= render partial: 'paternity_not_entitled_to_pay_outro.govspeak.erb' %>
   <% else %>
     <% if leave_type == "adoption" %>
-      ##Statutory Adoption Pay (SPP)
+      ##Statutory Adoption Pay (SAP)
 
       The employee is entitled to SAP.
 
