Divert Start/Continue link for Overseas Passports
Add logic to send users to hardcoded link when using the Overseas
Passports Smart Answer. This is a temporary measure while we work to
retire the Smart Answer permanently. We’ve had to roll out this
workaround as a matter of urgency.

There are no tests for the helper, which follows on from previous
changes on the ApplicationHelper in:

https://github.com/alphagov/smart-answers/pull/2792/commits/272251a8d302dd434c062385aa5ccfed81f0a075

--- a/app/views/smart_answers/_landing.html.erb
+++ b/app/views/smart_answers/_landing.html.erb
@@ -18,7 +18,7 @@
       <div class="intro">
         <%= start_node.body %>
         <p class="get-started">
-          <a rel="nofollow" href="<%= smart_answer_path(@name, started: 'y') %>" class="big button"><%= start_button %></a>
+          <a rel="nofollow" href="<%= start_button_href %>" class="big button"><%= start_button %></a>
         </p>
       </div>
       <%= start_node.post_body %>
