--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_no_visa_needed.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_no_visa_needed.govspeak.erb
@@ -9,7 +9,7 @@
 
   <% elsif calculator.study_visit? %>
 
-    However, you should bring documents with you to show at the border to show that you:
+    However, you should bring documents with you to show at the border that you:
 
       - have been accepted on a course by an [accredited institution](/eligibility) or by a UK Higher Education Institution, for example, a letter of acceptance from the institution
       - are able to fund your stay in the UK and return journey
