Minor content update
Remove double use of word “over” in sentence outcome `:outcome_school_y`.

--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_school_y.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_school_y.govspeak.erb
@@ -9,7 +9,7 @@
     You must apply for your visa from the country you’re currently living in.
   <% end %>
 
-  If they’re over 12 or over, you can [apply for a visa to visit them](/standard-visitor-visa) for up to 6 months.
+  If they’re 12 or over, you can [apply for a visa to visit them](/standard-visitor-visa) for up to 6 months.
 
   <%= render partial: 'stateless_or_refugee.govspeak.erb', locals: {calculator: calculator} %>
 <% end %>
