--- a/app/views/smart_answers/landing.html.erb
+++ b/app/views/smart_answers/landing.html.erb
@@ -20,7 +20,7 @@
         <%= start_node.body %>
 
         <p class="get-started">
-          <a rel="nofollow" href="<%= smart_answer_path(@name, started: 'y') %>" class="big button"><%= start_button %></a>
+          <a rel="nofollow" href="<%= start_button_href %>" class="big button"><%= start_button %></a>
         </p>
       </div>
 
