--- a/lib/smart_answer_flows/report-a-lost-or-stolen-passport/outcomes/complete_LS01_form.govspeak.erb
+++ b/lib/smart_answer_flows/report-a-lost-or-stolen-passport/outcomes/complete_LS01_form.govspeak.erb
@@ -8,7 +8,7 @@
   - use the new [online service](https://www.loststolenpassport.service.gov.uk/report) - this service is [in beta](/help/beta)
 
 
-  ^You’ll need a daytime telephone number and either an email address or UK mobile number to use the online service.^
+  ^You’ll need a daytime telephone number and  an email address or UK mobile number to use the online service.^
 
 
   %Your signature will be compared to the signature on the original passport application form. If the original application was made by someone else, you’ll also need to send a signed letter from that person confirming that the passport has been lost or stolen. This is to help prevent child abduction.%
