Update outcome to remove form LS01
Remove link to LS01 PDF form because from 1 May users have to use
the online service instead.

Changes content to reflect.

Rename the outcome to no longer be based on the name of the PDF
form. Update regression tests accordingly.

--- a/lib/smart_answer_flows/report-a-lost-or-stolen-passport/outcomes/report_lost_or_stolen_passport.govspeak.erb
+++ b/lib/smart_answer_flows/report-a-lost-or-stolen-passport/outcomes/report_lost_or_stolen_passport.govspeak.erb
@@ -1,5 +1,4 @@
-
-
+<% content_for :body do %>
 You can cancel your passport immediately by [reporting it online](https://www.loststolenpassport.service.gov.uk/report/passport-holder).
 
 You’ll need to provide a UK mobile number. If you don’t have one, you can use an email address and a landline number.
@@ -14,5 +13,4 @@ You'll need to [apply for a replacement passport](https://www.gov.uk/renew-adult
 
 [Contact the Passport Adviceline](https://www.gov.uk/passport-advice-line) if you need help.
 
-
-
+<% end %>
