--- a/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_uk.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_uk.govspeak.erb
@@ -43,10 +43,7 @@
 
   <% end %>
 
-  <% if calculator.ceremony_country == 'tunisia' %>
-    You’ll need to exchange your UK-issued CNI for one that’s valid in Tunisia at the nearest British embassy to where you’re getting married.
-
-  <% elsif calculator.ceremony_country == 'montenegro' %>
+  <% if calculator.ceremony_country == 'montenegro' %>
     ###Getting a Montenegrin version of your CNI
 
     You might need to exchange your UK-issued CNI for one that’s valid in Montenegro at the British Embassy in Podgorica.
@@ -79,7 +76,7 @@
     (
       calculator.document_download_link_if_opposite_sex_resident_of_uk_countries? &&
       (calculator.notary_public_ceremony_country? || %w(macedonia).include?(calculator.ceremony_country)) &&
-      %w(greece tunisia).exclude?(calculator.ceremony_country)
+      %w(greece).exclude?(calculator.ceremony_country)
     ) %>
     <%= render partial: 'download_and_fill_notice_and_affidavit_but_not_sign.govspeak.erb' %>
 
