--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/uk/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/uk/partner_other/_opposite_sex.govspeak.erb
@@ -4,7 +4,7 @@ Contact the [Embassy of the Islamic Republic of Iran](/government/publications/f
 
 ##What you need to do
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry. A CNI costs £35.
 
 You can normally get a CNI by giving a notice of marriage at your local register office or registrar in the UK. Find your local office or registrar in [England and Wales](https://www.gov.uk/register-offices), [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).
 
@@ -14,7 +14,7 @@ You can normally get a CNI by giving a notice of marriage at your local register
 
 You might need to exchange your UK-issued CNI for one that’s valid in Iran at the nearest embassy or consulate to where you’re getting married.
 
-[Make an appointment with the Embassy in Tehran](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-tehran/certificate-of-no-impediment/slot_picker) to exchange your UK CNI.
+[Make an appointment with the Embassy in Tehran](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-tehran/certificate-of-no-impediment/slot_picker) to exchange your UK CNI. It costs £50 to exchange your CNI.
 
 You should also check if it needs to be:
 
