--- a/lib/smart_answer_flows/report-a-lost-or-stolen-passport/outcomes/complete_LS01_form.govspeak.erb
+++ b/lib/smart_answer_flows/report-a-lost-or-stolen-passport/outcomes/complete_LS01_form.govspeak.erb
@@ -1,16 +1,16 @@
 <% content_for :body do %>
-If your passport has been lost or stolen, cancel it by [reporting it online](https://www.loststolenpassport.service.gov.uk/report/passport-holder) as soon as possible. 
+You can cancel your passport immediately by [reporting it online](https://www.loststolenpassport.service.gov.uk/report/passport-holder).
 
-^You’ll need a UK mobile number. If you don’t have one, you can use an email address and a landline number.
+You’ll need a UK mobile number. If you don’t have one, you can use an email address and a landline number.
 
-##Help cancelling your passport
+You'll need to [apply for a replacement passport](https://www.gov.uk/renew-adult-passport/overview) if you want one.
 
-[Contact the Passport Adviceline](https://www.gov.uk/passport-advice-line) if you need help.
-
-##Replace your passport
-
-You'll also need to apply for a replacement passport if you want one. Follow [guidance on replacing your passport](https://www.gov.uk/renew-adult-passport/overview).
+^If you [replace your passport using the paper application form](https://www.gov.uk/renew-adult-passport/replace), fill in section 3 to report your missing passport - you don't need to cancel it online as well.^
 
 %You can’t use the [1-day Premium service](https://www.gov.uk/get-a-passport-urgently) if you’re replacing a lost passport.%
+
+###Help cancelling your passport
+
+[Contact the Passport Adviceline](https://www.gov.uk/passport-advice-line) if you need help.
 
 <% end %>
