--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.govspeak.erb
@@ -50,13 +50,13 @@ You’ll need to get a Nulla Osta if you’re in Italy.
 
 To get a Nulla Osta, [make an appointment at the British Embassy in Rome](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-rome/notice-of-marriage-or-civil-partnership/slot_picker) to give notice of your marriage. Your partner doesn’t have to come with you.
 
-If you can’t get to the embassy, download the [Nulla Osta application pack](#), fill in the notice of marriage and affirmation or affidavit and sign them in front of an [Italian notary](http://www.notaries-directory.eu/). You’ll have to pay a fee. Send the signed documents and supporting documents to the embassy.
+If you can’t get to the embassy, download the [Nulla Osta application pack](/government/publications/nulla-osta-application-pack-for-marriages-in-italy), fill in the notice of marriage and affirmation or affidavit and sign them in front of an [Italian notary](http://www.notaries-directory.eu/). You’ll have to pay a fee. Send the signed documents and supporting documents to the embassy.
 
 $A
 British Embassy Rome
 Via XX Settembre 80/a
- 00187 Rome
- Italy
+00187 Rome
+Italy
 $A
 
 
@@ -68,7 +68,6 @@ You’ll need to bring:
 
 - your passport
 - a copy of your partner’s passport
-- your [full birth certificate](/order-copy-birth-death-marriage-certificate/) including your parents’ details
 - [notice of marriage](/government/publications/notice-of-marriage-form--2) and [affidavit for marriage](/government/publications/affirmationaffidavit-of-marital-status-form) - you can fill in (but not sign) these in advance
 - a residency certificate issued in the last 3 months (if you have one)
 - proof that you’ve been in Italy for at least 3 full days (if you don’t have a residency certificate) - for example a boarding pass or a bank statement
