Change first question for AdoptionCalculatorFlow
The phrasing and options for the first question in the
AdoptionCalculatorFlow need to change.

Changes just the output for first question and options in
AdoptionCalculatorFlow as a minimum, but subsequent changes will be
necessary to re-name the option variables and the question file
itself.

That work will be carried out in the next commits.

--- a/lib/smart_answer_flows/maternity-paternity-calculator/questions/taking_paternity_leave_for_adoption.govspeak.erb
+++ b/lib/smart_answer_flows/maternity-paternity-calculator/questions/taking_paternity_leave_for_adoption.govspeak.erb
@@ -1,8 +1,8 @@
 <% content_for :title do %>
-  Is the employee taking paternity leave to adopt a child?
+Is the employee taking paternity or maternity leave to adopt a child?
 <% end %>
 
 <% options(
-  "no": "No",
-  "yes": "Yes"
+  "no": "Maternity",
+  "yes": "Paternity"
 ) %>
