Final minor content change
Make content changes based on fact check feedback.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.govspeak.erb
@@ -50,7 +50,7 @@ You’ll need to get a Nulla Osta if you’re in Italy.
 
 To get a Nulla Osta, [make an appointment at the British Embassy in Rome](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-rome/notice-of-marriage-or-civil-partnership/slot_picker) to give notice of your marriage. Your partner doesn’t have to come with you.
 
-If you can’t get to the embassy, download the [Nulla Osta application pack](/government/publications/nulla-osta-application-pack-for-marriages-in-italy), fill in the notice of marriage and affirmation or affidavit and sign them in front of an [Italian notary](http://www.notaries-directory.eu/). You’ll have to pay a fee. Send the signed documents and supporting documents to the embassy.
+If you can’t get to the embassy, download the [Nulla Osta application pack](/government/publications/nulla-osta-application-pack-for-marriages-in-italy), fill in the affirmation and notice of marriage and sign them in front of an [Italian notary](http://www.notaries-directory.eu/). You’ll have to pay a fee. Send the signed documents and supporting documents to the embassy.
 
 $A
 British Embassy Rome
@@ -62,7 +62,7 @@ $A
 
 You need to be in Italy for 3 full days before you can give notice. This means if you arrive on Monday you can’t give notice until Friday.
 
-It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the Nulla Osta. You can pay by card. If you want to pay in cash you need to pay in the [local currency](/government/publications/italy-consular-fees). 
+It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the Nulla Osta. You can pay by card. If you want to pay in cash you need to pay in the [local currency](/government/publications/italy-consular-fees).
 
 You’ll need to bring:
 
@@ -80,7 +80,7 @@ If you’ve been married or in a civil partnership before, you’ll also need:
 - your annulment certificate - if your marriage or civil partnership was annulled
 - your civil partnership dissolution - if your civil partnership was dissolved
 - your partner’s [death certificate](/order-copy-birth-death-marriage-certificate/) and marriage certificate - if you’ve been widowed
-- evidence of name change (for example a deed poll) if the name on your current passport doesn’t match the name on your divorce or previous marriage certificate
+- evidence of name change (for example a deed poll or previous marriage certificate) if the name on your current passport doesn’t match the name on your divorce or previous marriage certificate
 
 You can provide copies of a divorce decree or death certificate instead of originals. They’ll need to be certified by a notary public or solicitor in the country where the divorce took place or the death was registered.
 
@@ -122,7 +122,6 @@ Your marriage will be recognised in the UK if:
 
 You won’t need to register your marriage in the UK.
 
-If you need extra copies of your marriage certificate, you can apply for them at the local comune. 
+If you need extra copies of your marriage certificate, you can apply for them at the local comune.
 
 If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
-
