--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_same_sex.govspeak.erb
@@ -21,7 +21,7 @@ Make an appointment to give notice of your marriage at:
 
 It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice. You can pay in the [local currency](/government/publications/china-consular-fees) with cash or credit card.
 
-You need to bring your and your partner’s passports.
+You need to bring your and your partner’s passports. Your passport must have an entry stamp showing that you've been in China for at least 7 full days.
 
 If your partner isn’t British, you’ll need to bring their ‘single certificate’. They can get this from:
 
