Updating Tunisia CNI process

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_local/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_local/_opposite_sex.govspeak.erb
@@ -12,10 +12,22 @@ You can normally get a CNI by giving a notice of marriage at your local register
 
 You’ll need to exchange your UK-issued CNI for one that’s valid in Tunisia at the nearest British embassy to where you’re getting married.
 
+[Make an appointment at the British Embassy in Tunis.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-tunis/exchange-a-certificate-of-no-impediment/slot_picker)
+
 %The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
 
 ##Naturalisation of your partner if they move to the UK
 
 Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+
+## Fees
+
+Service | Fee
+-|-
+Issuing a CNI, Nulla Osta or equivalent | £50
+
+You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Tunisia](/government/publications/tunisia-consular-fees).
+
+^You can only pay by cash in Tunisia. This must be in the local currency.^
 
 *[CNI]:certificate of no impediment
