--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/ceremony_country/partner_british/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/ceremony_country/partner_british/_opposite_sex.govspeak.erb
@@ -6,7 +6,7 @@ Contact the relevant local authorities in Tunisia to find out about local marria
 
 You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
 
-To get a CNI, you must post notice of your intended marriage in Tunisia. You can do this at the British embassy or in front of a notary public.
+To get a CNI, you must post notice of your intended marriage in Tunisia. You can do this at the British embassy.
 
 You’ll need to have been living in Tunisia for at least 3 full days before you can post notice, for example if you arrive in the country on Thursday, the earliest you can post notice is the following Monday.
 
@@ -38,19 +38,9 @@ If you or your partner have been divorced, widowed or previously in a civil part
 
 ###What happens next
 
-The embassy or notary public will charge a fee for taking the oath.
-
-If you give notice at a notary public, you must post the signed forms and any supporting documents to your nearest British embassy or consulate afterwards.
-
-^The embassy or consulate may charge a fee to return your documents to you.^
+The embassy will charge you for taking the oath, posting notice of your intention to marry and issuing your CNI.
 
 The consulate will display your notice of marriage publicly for 7 days.
-
-They’ll then send all of your documentation to the British embassy or consulate nearest to where you’re getting married in Tunisia, who will issue your CNI (as long as nobody has registered an objection).
-
-There’s an additional fee for this - the embassy or consulate will contact you to arrange payment.
-
-You should check if your CNI needs to be legalised (certified as genuine) by the local authorities in Tunisia.
 
 ^You don't need to stay in the country while your notice is posted.^
 
