--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/ceremony_country/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/iran/ceremony_country/partner_other/_opposite_sex.govspeak.erb
@@ -50,14 +50,15 @@ You should check if your CNI needs to be legalised (certified as genuine) by the
 
 ## Fees
 
-Service | Fee
--|-
-Receiving a notice of marriage | £50
-Issuing a CNI, Nulla Osta or equivalent | £50
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+           collection: calculator.services,
+           as: :service,
+           locals: { calculator: calculator } %>
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Iran](/government/publications/Iran-consular-fees).
 
-You can pay by Rials cash only. 
+<%=  render partial: 'how_to_pay.govspeak.erb',
+            locals: {calculator: calculator}%>
 
 
 *[CNI]:certificate of no impediment
