Remove redundant Egyptian guards in outcomes
No regression test artefacts have been affected

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_ceremony_country.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_marriage_in_consular_cni_countries_when_residing_in_ceremony_country.govspeak.erb
@@ -156,9 +156,7 @@
                locals: { calculator: calculator } %>
   <% end %>
 
-  <% if calculator.ceremony_country == 'egypt' %>
-    <%= render partial: 'required_supporting_documents_egypt.govspeak.erb' %>
-  <% elsif calculator.ceremony_country == 'greece' %>
+  <% if calculator.ceremony_country == 'greece' %>
     You’ll need to provide supporting documents, including:
 
     - your passport
