--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/uk/partner_local/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/chile/uk/partner_local/_same_sex.govspeak.erb
@@ -34,12 +34,12 @@ Your partner can apply to [become a British citizen](/becoming-a-british-citizen
 
 ## Fees
 
-Service | Fee
--|-
-Receiving a notice of registration | £50
-Registering a marriage | £150
-Issuing a marriage certificate | £50
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+           collection: calculator.services,
+           as: :service,
+           locals: { calculator: calculator } %>
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Chile](/government/publications/chile-consular-fees).
 
-You can pay by cash or credit card, but not by personal cheque.
+<%=  render partial: 'how_to_pay.govspeak.erb',
+            locals: {calculator: calculator}%>
