--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_local/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/tunisia/uk/partner_local/_opposite_sex.govspeak.erb
@@ -22,12 +22,13 @@ Your partner can apply to [become a British citizen](/becoming-a-british-citizen
 
 ## Fees
 
-Service | Fee
--|-
-Issuing a CNI, Nulla Osta or equivalent | £50
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+collection: calculator.services,
+as: :service,
+locals: { calculator: calculator } %>
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Tunisia](/government/publications/tunisia-consular-fees).
 
-^You can only pay by cash in Tunisia. This must be in the local currency.^
+<%=  render partial: 'how_to_pay.govspeak.erb', locals: {calculator: calculator}%>
 
 *[CNI]:certificate of no impediment
