--- a/lib/smart_answer_flows/calculate-your-child-maintenance/calculate_your_child_maintenance.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-child-maintenance/calculate_your_child_maintenance.govspeak.erb
@@ -13,8 +13,8 @@
   * agree an amount with the other parent if [you’re arranging it yourselves](/arranging-child-maintenance-yourself)
   * get an idea of the amount the government would work out for you (including collection and application fees)
 
-  The calculator is based on the rules used by the Child Maintenance Service. 
-  
+  The calculator is based on the rules used by the Child Maintenance Service.
+
   Don't use the calculator if you have a ['1993 scheme' or '2003 scheme' case](/how-child-maintenance-is-worked-out/child-maintenance-before-march-2003). These are managed by the [Child Support Agency](/child-maintenance/contact) (CSA).
 
   ^<%= render partial: 'disclaimer.govspeak.erb' %>^
@@ -24,6 +24,29 @@
   You need information about the income of the parent who'll be paying.
 
   Check the [child maintenance rates](/how-child-maintenance-is-worked-out/how-the-child-maintenance-service-works-out-child-maintenance) before you use the calculator.
+
+  ##If your circumstances have changed
+
+  If you already have a case with the Child Support Agency (CSA) or the Child Maintenance Service and your circumstances have changed, [contact the office managing your case](/child-maintenance/contact). They’ll tell you if your child maintenance payments will change.
+
+  *[CSA]: Child Support Agency
+<% end %>
+
+<% content_for :ab_body do %>
+  You can use this calculator to estimate your child maintenance. It can help you to:
+
+  * agree an amount with the other parent if [you’re arranging it yourselves](/arranging-child-maintenance-yourself)
+  * get an idea of the amount the government would work out for you (including collection and application fees)
+
+  The calculator is based on the rules used by the Child Maintenance Service.
+
+  Don't use the calculator if you have a ['1993 scheme' or '2003 scheme' case](/how-child-maintenance-is-worked-out/child-maintenance-before-march-2003). These are managed by the [Child Support Agency](/child-maintenance/contact) (CSA).
+
+  ^<%= render partial: 'disclaimer.govspeak.erb' %>^
+
+  ##Before you start
+
+  You need information about the income of the parent who'll be paying.
 
   ##If your circumstances have changed
 
