Test different button placement
We want to test the behaviour of users when the start button is higher up the
page.  We observed that on the current page, the button is below the fold and
also below several links that are tantalising for users, causing them to miss
the service.

This test will run until 23rd June 2017.

--- a/app/views/smart_answers/landing.html.erb
+++ b/app/views/smart_answers/landing.html.erb
@@ -20,7 +20,12 @@
   <article role="article" class="group" data-debug-template-path="<%= start_node.relative_erb_template_path %>">
     <div class="inner">
       <div class="intro">
+
+      <% if should_show_button_position_variant? %>
+        <%= start_node.ab_body %>
+      <% else %>
         <%= start_node.body %>
+      <% end %>
 
         <p class="get-started">
           <% if should_show_benchmarking_variant? %>
@@ -30,9 +35,11 @@
           <% end %>
         </p>
       </div>
-
-      <%= start_node.post_body %>
-
+      <% if should_show_button_position_variant? %>
+        <%= start_node.ab_post_body %>
+      <% else %>
+        <%= start_node.post_body %>
+      <% end %>
     </div>
   </article>
 </div>
