--- a/test/fixtures/smart_answer_flows/benchmarking-sample/benchmarking_sample.govspeak.erb
+++ b/test/fixtures/smart_answer_flows/benchmarking-sample/benchmarking_sample.govspeak.erb
@@ -17,3 +17,7 @@
 <% content_for :ab_body do %>
   Albert hated this view, the park and everyone in it.
 <% end %>
+
+<% content_for :ab_post_body do %>
+  This is an ironic post script.
+<% end %>
