Update files sizes for Student finance forms
This commit updates files sizes affecting the following:

- lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_1718.govspeak.erb
- lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_1718_pt.govspeak.erb
- lib/smart_answer_flows/student-finance-forms/outcomes/outcome_eu_pt_1718_continuing.govspeak.erb
- lib/smart_answer_flows/student-finance-forms/outcomes/outcome_eu_pt_1718_new.govspeak.erb
- lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_continuing.govspeak.erb
- lib/smart_answer_flows/student-finance-forms/outcomes/outcome_uk_pt_1718_new.govspeak.erb

--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_1718_pt.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_1718_pt.govspeak.erb
@@ -8,7 +8,7 @@
 
   Academic year | Form
   - | -
-  2017 to 2018 | [DSA1 - full form (PDF, 662KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_form_1718_d.pdf)
+  2017 to 2018 | [DSA1 - full form (PDF, 286kB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_form_1718_d.pdf)
   2017 to 2018 | [DSA1 - guidance notes (PDF, 78KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_notes_1718_d.pdf)
 
 
