--- a/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_1718.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-forms/outcomes/outcome_dsa_1718.govspeak.erb
@@ -11,7 +11,7 @@
 
   Academic year | Form
   - | -
-  2017 to 2018 | [DSA1 - full form (PDF, 662KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_form_1718_d.pdf)
+  2017 to 2018 | [DSA1 - full form (PDF, 286kB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_form_1718_d.pdf)
   2017 to 2018 | [DSA1 - guidance notes (PDF, 78KB)](http://media.slc.co.uk/sfe/1718/ft/sfe_dsa1_notes_1718_d.pdf)
 
   Fill in the DSA slim form if in this academic year you've already applied for any student finance that isn't a Postgraduate Loan.
